--- a/angular-utils/tsconfig.json
+++ b/angular-utils/tsconfig.json
@@ -2,6 +2,12 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "paths": {
+      "angular-utils": [
+        "dist/angular-utils/angular-utils",
+        "dist/angular-utils"
+      ]
+    },
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
