--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Utilities for Angular projects",
   "scripts": {
     "test": "ng test",
-    "build": "ng build",
+    "build": "ng build --prod",
     "lint": "ng lint",
     "format": "exit 1",
     "prepublishOnly": "npm run format && npm run lint && npm test && npm run build"
