--- a/angular.json
+++ b/angular.json
@@ -5,40 +5,35 @@
   "projects": {
     "angular-utils": {
       "projectType": "library",
-      "root": "projects/angular-utils",
-      "sourceRoot": "projects/angular-utils/src",
+      "root": "",
+      "sourceRoot": "src",
       "prefix": "lib",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
-            "tsConfig": "projects/angular-utils/tsconfig.lib.json",
-            "project": "projects/angular-utils/ng-package.json"
+            "tsConfig": "tsconfig.lib.json",
+            "project": "ng-package.json"
           },
           "configurations": {
             "production": {
-              "tsConfig": "projects/angular-utils/tsconfig.lib.prod.json"
+              "tsConfig": "tsconfig.lib.prod.json"
             }
           }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/angular-utils/src/test.ts",
-            "tsConfig": "projects/angular-utils/tsconfig.spec.json",
-            "karmaConfig": "projects/angular-utils/karma.conf.js"
+            "main": "src/test.ts",
+            "tsConfig": "tsconfig.spec.json",
+            "karmaConfig": "karma.conf.js"
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "projects/angular-utils/tsconfig.lib.json",
-              "projects/angular-utils/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "tsConfig": ["tsconfig.lib.json", "tsconfig.spec.json"],
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
