--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "test": "ng test",
     "build": "ng build --prod",
-    "lint": "ng lint",
-    "format": "license-check-and-add add -f ./.config/license-header.json",
+    "lint": "license-check-and-add check -f ./.config/license-header.json && ng lint && prettier --check .",
+    "format": "license-check-and-add add -f ./.config/license-header.json && prettier --write .",
     "prepublishOnly": "npm run format && npm run lint && npm test && npm run build"
   },
   "repository": {
@@ -50,6 +50,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "license-check-and-add": "^4.0.2",
     "ng-packagr": "^11.0.0",
+    "prettier": "^2.2.1",
     "protractor": "~7.0.0",
     "rxjs": "~6.6.0",
     "ts-node": "~8.3.0",
