--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "paths": {
-      "angular-utils": [
-        "dist/angular-utils/angular-utils",
-        "dist/angular-utils"
-      ]
+      "angular-utils": ["dist/angular-utils/angular-utils", "dist/angular-utils"]
     },
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
@@ -22,10 +19,7 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "es2020",
-    "lib": [
-      "es2018",
-      "dom"
-    ]
+    "lib": ["es2018", "dom"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
