--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -23,4 +23,4 @@ jobs:
       - name: Build
         run: npm run build
       - name: Test
-        run: npm test
+        run: npm test -- --browsers=FirefoxHeadlessCI,ChromeHeadlessCI --no-progress
