--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Run pre publish scripts
         run: npm run prepublishOnly
       - name: Publish on NPM
-        run: npm publish
+        run: npm publish --access public
         working-directory: ./dist
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
@@ -51,7 +51,7 @@ jobs:
       - name: Run pre publish scripts
         run: npm run prepublishOnly
       - name: Publish on GitHub Package Registry
-        run: npm publish
+        run: npm publish --access public
         working-directory: ./dist
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
