--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -2,7 +2,7 @@ name: Validate Pull Request
 
 on:
   pull_request:
-    branches: [master]
+    branches: [master, 'release/*']
 
 jobs:
   validate:
