--- a/angular.json
+++ b/angular.json
@@ -10,7 +10,7 @@
       "prefix": "lp",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "builder": "@angular-devkit/build-ng-packagr:build",
           "options": {
             "tsConfig": "tsconfig.lib.json",
             "project": "ng-package.json"
