--- a/package.json
+++ b/package.json
@@ -21,50 +21,54 @@
   },
   "homepage": "https://github.com/LucasPaganini/angular-utils#readme",
   "peerDependencies": {
-    "@angular/common": "^11.2.7",
-    "@angular/core": "^11.2.7"
+    "@angular/common": "9.x.x",
+    "@angular/core": "9.x.x"
   },
   "dependencies": {
-    "tslib": "^2.0.0"
+    "tslib": "^1.10.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.6",
-    "@angular/animations": "~11.2.7",
-    "@angular/cli": "~11.2.6",
-    "@angular/common": "~11.2.7",
-    "@angular/compiler": "~11.2.7",
-    "@angular/compiler-cli": "~11.2.7",
-    "@angular/core": "~11.2.7",
-    "@angular/forms": "~11.2.7",
-    "@angular/platform-browser": "~11.2.7",
-    "@angular/platform-browser-dynamic": "~11.2.7",
-    "@angular/router": "~11.2.7",
-    "@types/jasmine": "~3.6.0",
+    "@angular-devkit/build-angular": "~0.900.7",
+    "@angular-devkit/build-ng-packagr": "~0.900.7",
+    "@angular/animations": "~9.0.0",
+    "@angular/cli": "~9.0.0",
+    "@angular/common": "~9.0.0",
+    "@angular/compiler": "~9.0.0",
+    "@angular/compiler-cli": "~9.0.0",
+    "@angular/core": "~9.0.0",
+    "@angular/forms": "~9.0.0",
+    "@angular/language-service": "~9.0.0",
+    "@angular/platform-browser": "~9.0.0",
+    "@angular/platform-browser-dynamic": "~9.0.0",
+    "@angular/router": "~9.0.0",
+    "@types/jasmine": "~3.5.0",
+    "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
-    "codelyzer": "^6.0.0",
+    "codelyzer": "^5.1.2",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.0",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-firefox-launcher": "^2.1.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
     "license-check-and-add": "^4.0.2",
-    "ng-packagr": "^11.0.0",
+    "ng-packagr": "^9.0.0",
     "prettier": "^2.2.1",
-    "protractor": "~7.0.0",
-    "rxjs": "~6.6.0",
+    "protractor": "~5.4.3",
+    "rxjs": "~6.5.4",
     "ts-node": "~8.3.0",
-    "tslib": "^2.0.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.1.5",
-    "zone.js": "~0.11.3"
+    "tslib": "^1.10.0",
+    "tslint": "~5.18.0",
+    "typescript": "~3.7.5",
+    "zone.js": "~0.10.2"
   }
 }
