Add more strict TS flags

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,20 +2,20 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    // "alwaysStrict": true,
+    "alwaysStrict": true,
     "strict": true,
-    // "strictNullChecks": true,
-    // "strictBindCallApply": true,
-    // "strictFunctionTypes": true,
-    // "strictPropertyInitialization": true,
+    "strictNullChecks": true,
+    "strictBindCallApply": true,
+    "strictFunctionTypes": true,
+    "strictPropertyInitialization": true,
     "forceConsistentCasingInFileNames": true,
-    // "allowJs": false,
+    "allowJs": false,
 
-    // "noEmitOnError": true,
-    // "noUnusedLocals": true,
-    // "noUnusedParameters": true,
-    // "noImplicitAny": true,
-    // "noImplicitThis": true,
+    "noEmitOnError": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
 
