--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -128,7 +128,7 @@
         "@typescript-eslint/no-dynamic-delete": "error",
         "@typescript-eslint/no-for-in-array": "error",
         "@typescript-eslint/no-require-imports": "error",
-        "@typescript-eslint/consistent-type-imports": "error",
+        "@typescript-eslint/consistent-type-imports": "off",
         "@typescript-eslint/prefer-as-const": "error",
         "@typescript-eslint/prefer-for-of": "error",
         "@typescript-eslint/prefer-readonly": "error",
